--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             <div class="row mb-5">
                 <div class="col-md-8 mx-auto text-center">
                     <h6 class="text-primary">CONTACT</h6>
-                    <h1>Get In Touch</h1>
+                    <h1>We're At Your Service</h1>
                     <p>Lorem ipsum dolor sit amet consectetur nisi necessitatibus repellat distinctio eveniet eaque fuga
                         in cumque optio consectetur harum vitae debitis sapiente praesentium aperiam aut</p>
                 </div>
@@ -536,8 +536,8 @@
                         <h5 class="text-white">Contact</h5>
                         <ul class="list-unstyled">
                             <li>Address: 2715 Ash Dr. San Jose, South Dakota 83475</li>
-                            <li>Email: jackson.graham@example.com</li>
-                            <li>Phone: (603) 555-0123</li>
+                            <li>Email: iamyangseo@gmail.com</li>
+                            <li>Phone: (020) 211-4315</li>
                         </ul>
                     </div>
                 </div>
@@ -550,11 +550,11 @@
                         <p class="mb-0">© 2020 copyright all right reserved | Designed with <i
                             class="bx bx-heart text-danger"></i> by<a
                                 href="https://www.youtube.com/channel/UCYMEEnLzGGGIpQQ3Nu_sBsQ"
-                                class="text-white">SA7MAN</a></p>
+                                class="text-white">HazARD</a></p>
                     </div>
                     <div class="col-md-6">
                         <div class="social-icons">
-                            <a href="#"><i class='bx bxl-facebook'></i></a>
+                            <a href="https://web.facebook.com/"><i class='bx bxl-facebook'></i></a>
                             <a href="#"><i class='bx bxl-twitter'></i></a>
                             <a href="#"><i class='bx bxl-instagram-alt'></i></a>
                         </div>
